--- a/Pages/packages/details.cshtml
+++ b/Pages/packages/details.cshtml
@@ -315,7 +315,7 @@
                     <ul class="inline-code" style="margin-top:0em;padding:10px 20px;">
                         @foreach (var diffChunk in ti.DiffChunks) {
                             <li style="margin-bottom:0em;">Lines @(diffChunk.Where(x => x.Position.HasValue).FirstOrDefault()?.Position ?? 0)..@(diffChunk.Where(x => x.Position.HasValue).LastOrDefault()?.Position ?? 0) </li>
-                            <pre><code>@foreach (var line in diffChunk) {@Html.Raw(line.GetBetterText() +"\n")}</code></pre>
+                            <pre><code>@foreach (var line in diffChunk) {@Html.Raw(line.GetDiffText() +"\n")}</code></pre>
                         }
                     </ul>
                 }
